--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-
 html {
     scroll-behavior: smooth;
 }
@@ -136,7 +134,6 @@ select {
     padding-top: 2rem;
     margin-left: 4rem;
     margin-bottom: 8rem;
-    font-family: "Merriweather", Georgia, serif;
 }
 #backUpContainer {
     position: fixed;
@@ -163,13 +160,40 @@ h3 {
     top: -0.4em;
     font-size: .85rem;
 }
+.footnotecontainer {
+    margin-top: 1rem;
+}
 .footnote {
     font-size: .85rem;
+    margin: 0;
+    padding: 0;
 }
 .chartContainer {
     padding: 0 1rem;
     padding-bottom: 1rem;
 }
+
+figure {
+    margin-bottom: 2em;
+    font-size:.9rem;
+}
+figure > blockquote {
+    margin-left: 1rem;
+    border-left: 4px solid mistyrose;
+    padding-left: 1rem;
+    text-align: justify;
+    margin-bottom: .8rem;
+}
+figcaption {
+    margin-left: auto;
+    max-width: 70%;
+    font-size: .8rem;
+    text-align: right;
+}
+.table {
+    font-size:.8rem;
+}
+
 /* mobile styling */
 @media (max-width: 900px) {
     .content {
